<resources>
    <string name="app_name">Calculadora de resistencias</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ResistorImage">ResistorImage</string>
    <string name="TextColorResistor">Presiona las bandas de la resistencia para cambiar su color y calcular su valor correspondiente. Los índices se indican sobre cada banda y sobre el botón que regresa al color anterior</string>
    <string name="TextValueResistor">Selecciona el valor que deseas y después su multiplicacdor correspondiente para poder calcular su código de colores en las bandas de la resistencia</string>
    <string name="anterior_label">Botones para regresar al color anterior correspondiente a la banda con el índice marcado arriba</string>
    <string name="CampoVacio"> </string>
    <string name="temp">temp</string>
    <string name="menu_bottom1">Colores</string>
    <string name="menu_bottom2">Valores</string>

    <string-array name="values_toles">
        <item>±1%</item>
        <item>±2%</item>
        <item>±4%</item>
        <item>±0.5%</item>
        <item>±0.25%</item>
        <item>±0.10%</item>
        <item>±0.05%</item>
        <item>±5%</item>
        <item>±10%</item>
    </string-array>
    
    <string-array name="multiplicador">
        <item>x1 Ω</item>
        <item>x10 Ω</item>
        <item>x100 Ω</item>
        <item>x1 kΩ</item>
        <item>x10 kΩ</item>
        <item>x100 kΩ</item>
        <item>x1 MΩ</item>
        <item>x10 MΩ</item>
    </string-array>

    <string-array name="valores_definitivo">
        <item>1.0</item>
        <item>1.2</item>
        <item>1.5</item>
        <item>1.8</item>
        <item>2.2</item>
        <item>2.7</item>
        <item>3.3</item>
        <item>3.9</item>
        <item>4.7</item>
        <item>5.1</item>
        <item>5.6</item>
        <item>6.8</item>
        <item>8.2</item>
    </string-array>

    <string-array name="values_resis">
        <item>---</item>
        <item>1.0 Ω</item>
        <item>1.2 Ω</item>
        <item>1.5 Ω</item>
        <item>1.8 Ω</item>
        <item>2.2 Ω</item>
        <item>2.7 Ω</item>
        <item>3.3 Ω</item>
        <item>3.9 Ω</item>
        <item>4.7 Ω</item>
        <item>5.1 Ω</item>
        <item>5.6 Ω</item>
        <item>6.8 Ω</item>
        <item>8.2 Ω</item>
        <item>10.0 Ω</item>
        <item>12.0 Ω</item>
        <item>15.0 Ω</item>
        <item>18.0 Ω</item>
        <item>22.0 Ω</item>
        <item>27.0 Ω</item>
        <item>33.0 Ω</item>
        <item>39.0 Ω</item>
        <item>47.0 Ω</item>
        <item>51.0 Ω</item>
        <item>56.0 Ω</item>
        <item>68.0 Ω</item>
        <item>82.0 Ω</item>
        <item>100.0 Ω</item>
        <item>120.0 Ω</item>
        <item>150.0 Ω</item>
        <item>180.0 Ω</item>
        <item>220.0 Ω</item>
        <item>270.0 Ω</item>
        <item>330.0 Ω</item>
        <item>390.0 Ω</item>
        <item>470.0 Ω</item>
        <item>510.0 Ω</item>
        <item>560.0 Ω</item>
        <item>680.0 Ω</item>
        <item>820.0 Ω</item>
        <item>1.0 KΩ</item>
        <item>1.2 KΩ</item>
        <item>1.5 KΩ</item>
        <item>1.8 KΩ</item>
        <item>2.2 KΩ</item>
        <item>2.7 KΩ</item>
        <item>3.3 KΩ</item>
        <item>3.9 KΩ</item>
        <item>4.7 KΩ</item>
        <item>5.1 KΩ</item>
        <item>5.6 KΩ</item>
        <item>6.8 KΩ</item>
        <item>8.2 KΩ</item>
        <item>10.0 KΩ</item>
        <item>12.0 KΩ</item>
        <item>15.0 KΩ</item>
        <item>18.0 KΩ</item>
        <item>22.0 KΩ</item>
        <item>27.0 KΩ</item>
        <item>33.0 KΩ</item>
        <item>39.0 KΩ</item>
        <item>47.0 KΩ</item>
        <item>51.0 KΩ</item>
        <item>56.0 KΩ</item>
        <item>68.0 KΩ</item>
        <item>82.0 KΩ</item>
        <item>100.0 KΩ</item>
        <item>120.0 KΩ</item>
        <item>150.0 KΩ</item>
        <item>180.0 KΩ</item>
        <item>220.0 KΩ</item>
        <item>270.0 KΩ</item>
        <item>330.0 KΩ</item>
        <item>390.0 KΩ</item>
        <item>470.0 KΩ</item>
        <item>510.0 KΩ</item>
        <item>560.0 KΩ</item>
        <item>680.0 KΩ</item>
        <item>820.0 KΩ</item>
        <item>1.0 MΩ</item>
        <item>1.2 MΩ</item>
        <item>1.5 MΩ</item>
        <item>1.8 MΩ</item>
        <item>2.2 MΩ</item>
        <item>2.7 MΩ</item>
        <item>3.3 MΩ</item>
        <item>3.9 MΩ</item>
        <item>4.7 MΩ</item>
        <item>5.1 MΩ</item>
        <item>5.6 MΩ</item>
        <item>6.8 MΩ</item>
        <item>8.2 MΩ</item>
        <item>10.0 MΩ</item>
    </string-array>
</resources>