<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ValuesResistorFragment">

    <ImageView
        android:id="@+id/imageViewValues"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/ResistorImage"
        android:src="@drawable/resis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewValues"
        android:layout_width="402dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="550dp"
        android:text="@string/TextValueResistor"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botRes2_2"
        android:layout_width="17dp"
        android:layout_height="68dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="125dp"
        android:text="@string/CampoVacio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botRes3_2"
        android:layout_width="17dp"
        android:layout_height="68dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="125dp"
        android:text="@string/CampoVacio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botRes1_2"
        android:layout_width="17dp"
        android:layout_height="68dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="123dp"
        android:text="@string/CampoVacio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tole2"
        android:layout_width="17dp"
        android:layout_height="68dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="123dp"
        android:text="@string/CampoVacio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="480dp"
        android:entries="@array/values_resis"
        app:layout_constraintBottom_toTopOf="@+id/textViewValues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="400dp"
        android:entries="@array/multiplicador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerTole"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="285dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="480dp"
        android:entries="@array/values_toles"
        app:layout_constraintBottom_toTopOf="@+id/textViewValues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/valorReal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/temp"
        android:textAllCaps="false"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>